# pet-pawpularity-regression

./: .gitignore  README.MD  config.env  env.yml  main.py  main_pytorch.py  main_tensorflow.py  pyproject.toml
pawpularity/: __init__.py  processing.py
pawpularity/config/: constants.py
pawpularity/model/: callback.py  data.py  model.py  scheduler.py
pawpularity/model/pytorch_lightning/: data.py  model.py  scheduler.py
