[tool.poetry]
name = "pawpularity"
version = "0.1.0"
description = ""
authors = ["Chew Ze Yong <gavinchew92@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
pandas = "^1.3.3"
notebook = "^6.4.4"
ipykernel = "^6.4.1"
kaggle = "^1.5.12"
torch = "^1.9.1"
timm = "^0.4.12"
pytorch-lightning = "^1.4.9"
wandb = "^0.12.4"
scikit-learn = "^1.0"
opencv-python = "^4.5.3"
albumentations = "^1.1.0"
python-dotenv = "^0.19.1"
pydantic = "^1.8.2"
lightning-bolts = "^0.4.0"
[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
